tests/NormalTests/paczka1/fuzzy1/92954816.err
Error in line 3: S78 S748 43,6
Error in line 6: a4vInr9aKAS S286 14,9
Error in line 23: DGMViw S286 34,7
Error in line 33: a4vInr9aKAS S286 71,1
Error in line 34: 6yATZ S286 87,4
